// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./SettingsChange.stories AddOwner 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 container css-zpxm0u-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-1950vt0-MuiTypography-root"
      >
        <mock-icon
          aria-hidden=""
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1hr8a3z-MuiSvgIcon-root"
          focusable="false"
        />
        Add owner
      </p>
      <div
        class="container"
      >
        <div
          class="avatarContainer"
          style="width: 32px; height: 32px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
            style="width: 32px; height: 32px;"
          />
        </div>
        <div
          class="MuiBox-root css-1lchl8k"
        >
          <div
            class="ethHashInfo-name MuiBox-root css-171onha"
            title="Nevinha"
          >
            <div
              class="MuiBox-root css-9gv43x"
            >
              Nevinha
            </div>
          </div>
          <div
            class="addressContainer"
          >
            <div
              class="MuiBox-root css-b5p5gz"
            >
              <span
                aria-label="Copy to clipboard"
                class=""
                data-mui-internal-clone-element="true"
                style="cursor: pointer;"
              >
                <span>
                  0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045
                </span>
              </span>
            </div>
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <button
                aria-label="Copy to clipboard"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                  data-testid="copy-btn-icon"
                  focusable="false"
                />
              </button>
            </span>
            <div
              class="MuiBox-root css-yjghm1"
            />
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1facvfi-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-0"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-17vdyq3-MuiTypography-root"
      >
        Any transaction requires the confirmation of:
      </p>
      <p
        class="MuiTypography-root MuiTypography-body1 css-v6lhhw-MuiTypography-root"
      >
        <b>
          1
        </b>
         out of
         
        <b>
          1
           signer
        </b>
      </p>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1facvfi-MuiDivider-root"
    />
  </div>
</div>
`;

exports[`./SettingsChange.stories SwapOwner 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-160pto4-MuiPaper-root"
      style="--Paper-shadow: none;"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-qzqzle-MuiTypography-root"
      >
        <mock-icon
          aria-hidden=""
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1hr8a3z-MuiSvgIcon-root"
          focusable="false"
        />
        Previous signer
      </p>
      <div
        class="container"
      >
        <div
          class="avatarContainer"
          style="width: 40px; height: 40px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-143xw5x-MuiSkeleton-root"
            style="width: 40px; height: 40px;"
          />
        </div>
        <div
          class="MuiBox-root css-1lchl8k"
        >
          <div
            class="ethHashInfo-name MuiBox-root css-171onha"
            title="Bob"
          >
            <div
              class="MuiBox-root css-9gv43x"
            >
              Bob
            </div>
          </div>
          <div
            class="addressContainer"
          >
            <div
              class="MuiBox-root css-b5p5gz"
            >
              <span
                aria-label="Copy to clipboard"
                class=""
                data-mui-internal-clone-element="true"
                style="cursor: pointer;"
              >
                <span>
                  0x00000000
                </span>
              </span>
            </div>
            <span
              aria-label="Copy to clipboard"
              class=""
              data-mui-internal-clone-element="true"
              style="cursor: pointer;"
            >
              <button
                aria-label="Copy to clipboard"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <mock-icon
                  aria-hidden=""
                  class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                  data-testid="copy-btn-icon"
                  focusable="false"
                />
              </button>
            </span>
            <div
              class="MuiBox-root css-yjghm1"
            />
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth nestedDivider css-1facvfi-MuiDivider-root"
    />
  </div>
</div>
`;
